--- a/helm_install.yaml
+++ b/helm_install.yaml
@@ -8,3 +8,7 @@
         src: /share/helm/linux-amd64/helm
         dest: /usr/local/bin/
         mode: '0755'
+
+    - name: export kubeconfig
+      ansible.builtin.raw: export KUBECONFIG=/etc/rancher/k3s/k3s.yaml
+
