--- a/harbor_install.yaml
+++ b/harbor_install.yaml
@@ -9,42 +9,54 @@
         state: directory
         mode: '0755'
 
+    - name: mkdir directory for Harbor Helm chart
+      ansible.builtin.file:
+        path: /home/harbor_deployment
+        state: directory
+        mode: '0755'
+
+    - name: copy Helm chart to master
+      ansible.builtin.copy:
+        src: /share/harbor/harbor_deployment
+        dest: /home/
+
     - name: Set up Kubeconfig
       ansible.builtin.raw:: export KUBECONFIG=/etc/rancher/k3s/k3s.yaml
 
-    - name: copy required files for install
-      ansible.builtin.copy:
-        src: /share/harbor/harbor_images
-        dest: /home/harbor_images
+    - name: Copy images to master
+      ansible.builtin.unarchive:
+        src: /share/harbor/harbor_images.tar
+        dest: /home/
 
-    - name: copy Helm chart
-      ansible.builtin.copy:
-        src: /share/harbor/harbor-1.13.0.tgz
-        dest: /home/harbor_images
+    - name: K3s load harbor-core image
+      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-core-v2.9.1.tar
 
-    - name: K3s load harbor-core-base image
-      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-core-base.tar
+    - name: K3s load harbor-db image
+      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-db-v2.9.1.tar
 
-    - name: K3s load harbor-exporter-base image
-      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-exporter-base.tar
+    - name: K3s load harbor-exporter image
+      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-exporter-v2.9.1.tar
 
-    - name: K3s load harbor-nginx-base image
-      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-nginx-base.tar
+    - name: K3s load harbor-jobservice image
+      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-jobservice-v2.9.1.tar
 
-    - name: K3s load harbor-redis-base image
-      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-redis-base.tar
+    - name: K3s load harbor-portal image
+      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-portal-v2.9.1.tar
 
-    - name: K3s load harbor-registry-base image
-      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-registry-base.tar
+    - name: K3s load harbor-registryctl image
+      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-registryctl-v2.9.1.tar
 
-    - name: K3s load harbor-registryctl-base image
-      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-registryctl-base.tar
+    - name: K3s load nginx-photon image
+      ansible.builtin.raw: k3s ctr images import /home/harbor_images/nginx-photon-v2.9.1.tar
 
-    - name: K3s load harbor-trivy-adapter-base image
-      ansible.builtin.raw: k3s ctr images import /home/harbor_images/harbor-trivy-adapter-base.tar
+    - name: K3s load redis-photon image
+      ansible.builtin.raw: k3s ctr images import /home/harbor_images/redis-photon-v2.9.1.tar
 
-    - name: Create namespace for Harbor
-      ansible.builtin.raw: kubectl create namespace harbor
+    - name: K3s load registry-photon image
+      ansible.builtin.raw: k3s ctr images import /home/harbor_images/registry-photon-v2.9.1.tar
+
+    - name: K3s load harbor-db image
+      ansible.builtin.raw: k3s ctr images import /home/harbor_images/trivy-adapter-photon-v2.9.1.tar
 
     - name: Create values.yaml for local setup
       copy:
@@ -72,6 +84,9 @@
           externalURL: http://core.harbor.domain
         dest: /home/harbor_images/values.yaml
 
+    - name: export Kubeconfig
+      ansible.builtin.raw: export KUBECONFIG=/etc/rancher/k3s/k3s.yaml
+
     - name: install Harbor using Helm
-      ansible.builtin.raw: helm install harbor /home/harbor_images/harbor-1.13.0.tgz -f /home/harbor_images/values.yaml
+      ansible.builtin.raw: helm install harbor /home/harbor_deployment -f /home/harbor_images/values.yaml
     
