--- a/k3s_master_install.yaml
+++ b/k3s_master_install.yaml
@@ -101,5 +101,10 @@
         state: present
 
     - name: Install K3s on worker nodes
-      ansible.builtin.shell: >-
-        INSTALL_K3S_SKIP_DOWNLOAD=true K3S_URL=https://{{ groups['master'][0] }}:6443 K3S_TOKEN={{ hostvars[groups['master'][0]]['node_token'] }}' /home/./install.sh sh -
+      ansible.builtin.shell: >
+        INSTALL_K3S_SKIP_DOWNLOAD=true \
+        K3S_URL="https://{{ groups['master'][0] }}:6443" \
+        K3S_TOKEN="{{ hostvars[groups['master'][0]]['node_token'] }}" \
+        /home/./install.sh
+      args:
+        executable: /bin/bash
