--- a/private-registry.yaml
+++ b/private-registry.yaml
@@ -13,9 +13,10 @@
       copy:
         content: |
           mirrors:
-            registry.local:
+            192.168.1.1:
               endpoint:
                 - "https://192.168.1.1:5000"
+              insecure: true
         dest: /etc/rancher/k3s/registries.yaml
 
 - name: Restart K3s master node service
