--- a/K3s_docker_cluster.yaml
+++ b/K3s_docker_cluster.yaml
@@ -91,4 +91,51 @@
     - name: reload firewall
       ansible.builtin.raw: firewall-cmd --reload
 
-    - name: bullshit
+- name: K3s worker nodes install
+  hosts: workers
+  gather_facts: no
+  tasks:
+
+    - name: mkdir /var/lib/rancher/k3s/agent/images/
+      ansible.builtin.file:
+        path: /var/lib/rancher/k3s/agent/images/
+        state: directory
+        mode: '0755'
+
+    - name: Set k3s Executable
+      ansible.builtin.copy:
+        src: /share/k3s/k3s
+        dest: /usr/local/bin/
+        mode: '0755'
+
+    - name: Set images
+      ansible.builtin.copy:
+        src: /share/k3s/k3s-airgap-images-amd64.tar
+        dest: /var/lib/rancher/k3s/agent/images/
+
+    - name: Set install script
+      ansible.builtin.copy:
+        src: /share/k3s/install.sh
+        dest: /home/
+        mode: '0755'
+
+    - name: Get file for k3s-selinux
+      ansible.builtin.copy:
+        src: /share/k3s/k3s-selinux-1.4-1.el9.noarch.rpm
+        dest: /home/
+
+    - name: install k3s-selinux
+      ansible.builtin.yum:
+        name: /home/k3s-selinux-1.4-1.el9.noarch.rpm
+        disable_gpg_check: True
+        disablerepo: baseos,appstream,extras,extras-common
+        state: present
+
+    - name: Install K3s on worker nodes
+      ansible.builtin.shell: >
+        INSTALL_K3S_SKIP_DOWNLOAD=true \
+        K3S_URL="https://{{ groups['master'][0] }}:6443" \
+        K3S_TOKEN="{{ hostvars[groups['master'][0]]['node_token'] }}" \
+        /home/./install.sh
+      args:
+        executable: /bin/bash
