--- a/K3s_docker_cluster.yaml
+++ b/K3s_docker_cluster.yaml
@@ -136,6 +136,6 @@
         INSTALL_K3S_SKIP_DOWNLOAD=true \
         K3S_URL="https://{{ groups['master'][0] }}:6443" \
         K3S_TOKEN="{{ hostvars[groups['master'][0]]['node_token'] }}" \
-        /home/./install.sh
+        /home/./install.sh --docker
       args:
         executable: /bin/bash
