--- a/private-registry.yaml
+++ b/private-registry.yaml
@@ -1,6 +1,7 @@
 - name: K3s private registry configuration
   hosts: all
   gather_facts: no
+  become: true
   tasks:
 
     - name: Create /etc/rancher/k3s/ directory on all nodes
