Private registry configuratie toegevoegd aan docker en K3s configuratie

--- a/K3s_docker_cluster.yaml
+++ b/K3s_docker_cluster.yaml
@@ -68,3 +68,5 @@
 - name: Set up worker nodes
   import_playbook: K3s_worker_install.yaml
 
+- name: Set up Helm for master
+  import_playbook: helm_install.yaml
