--- a/k3s_cluster_install.yaml
+++ b/k3s_cluster_install.yaml
@@ -40,9 +40,10 @@
         state: present
 
     - name: Execute ./install.sh
-      ansible.builtin.raw: INSTALL_K3S_SKIP_DOWNLOAD=true /home/./install.sh
+      ansible.builtin.shell: > 
+        INSTALL_K3S_SKIP_DOWNLOAD=true /home/./install.sh
 
-    - name: Get node token.
+    - name: Get node token
       ansible.builtin.command: cat /var/lib/rancher/k3s/server/node-token
       changed_when: false
       register: node_token_output
