overal ansible.builtin.shell

--- a/K3s_docker_cluster.yaml
+++ b/K3s_docker_cluster.yaml
@@ -44,7 +44,8 @@
         state: present
 
     - name: Execute ./install.sh
-      ansible.builtin.shell: INSTALL_K3S_SKIP_DOWNLOAD=true /home/./install.sh --docker
+      ansible.builtin.shell: >- 
+        INSTALL_K3S_SKIP_DOWNLOAD=true /home/./install.sh --docker
 
     - name: Get node token.
       ansible.builtin.command: cat /var/lib/rancher/k3s/server/node-token
