--- a/harbor_local_deploy.yaml
+++ b/harbor_local_deploy.yaml
@@ -60,6 +60,9 @@
     - name: K3s load harbor-db image
       ansible.builtin.raw: k3s ctr images import /home/harbor_images/trivy-adapter-photon-v2.9.1.tar
 
+    - name: K3s load harbor-db image
+      ansible.builtin.raw: k3s ctr images import /home/mirrored-pause.tar
+
     - name: install Harbor using Helm
-      ansible.builtin.raw: helm install harbor /home/harbor_deployment
+      ansible.builtin.raw: helm install harbor /home/harbor_deployment --kubeconfig /etc/rancher/k3s/k3s.yaml
     
