--- a/harbor_local_deploy.yaml
+++ b/harbor_local_deploy.yaml
@@ -15,9 +15,9 @@
         state: directory
         mode: '0755'
 
-    - name: copy Helm template to master
-      ansible.builtin.copy:
-        src: /share/harbor/template.yaml
+    - name: copy Helm chart to master
+      ansible.builtin.unarchive:
+        src: /share/harbor/harbor-1.13.1.tgz
         dest: /home/
 
     - name: Copy images to master
@@ -64,5 +64,5 @@
       ansible.builtin.raw: k3s ctr images import /home/mirrored-pause.tar
 
     - name: install Harbor using Helm
-      ansible.builtin.raw: helm install harbor /home/harbor_deployment --kubeconfig /etc/rancher/k3s/k3s.yaml
+      ansible.builtin.raw: helm install harbor /home/harbor --kubeconfig /etc/rancher/k3s/k3s.yaml
     
