--- a/harbor_local_deploy.yaml
+++ b/harbor_local_deploy.yaml
@@ -26,34 +26,34 @@
         dest: /home/
 
     - name: K3s load harbor-core image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-core-v2.9.1.tar
+      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-core.tar
 
     - name: K3s load harbor-db image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-imagess/harbor-db-v2.9.1.tar
+      ansible.builtin.raw: k3s ctr images import /home/harbor-imagess/harbor-db.tar
 
     - name: K3s load harbor-exporter image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-exporter-v2.9.1.tar
+      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-exporter.tar
 
     - name: K3s load harbor-jobservice image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-jobservice-v2.9.1.tar
+      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-jobservice.tar
 
     - name: K3s load harbor-portal image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-portal-v2.9.1.tar
+      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-portal.tar
 
     - name: K3s load harbor-registryctl image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-registryctl-v2.9.1.tar
+      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-registryctl.tar
 
     - name: K3s load nginx-photon image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/nginx-photon-v2.9.1.tar
+      ansible.builtin.raw: k3s ctr images import /home/harbor-images/nginx-photon.tar
 
     - name: K3s load redis-photon image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/redis-photon-v2.9.1.tar
+      ansible.builtin.raw: k3s ctr images import /home/harbor-images/redis-photon.tar
 
     - name: K3s load registry-photon image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/registry-photon-v2.9.1.tar
+      ansible.builtin.raw: k3s ctr images import /home/harbor-images/registry-photon.tar
 
     - name: K3s load harbor-db image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/trivy-adapter-photon-v2.9.1.tar
+      ansible.builtin.raw: k3s ctr images import /home/harbor-images/trivy-adapter-photon.tar
 
     - name: K3s load rancher/mirrored-pause image
       ansible.builtin.raw: k3s ctr images import /home/mirrored-pause.tar
