--- a/harbor_local_deploy.yaml
+++ b/harbor_local_deploy.yaml
@@ -1,9 +1,8 @@
-- name: Harbor deployment using Helm
+- name: Load Harbor images using K3s ctr
   hosts: all
   gather_facts: false
   become: true
   tasks:
-
     - name: mkdir directory for Harbor container images
       ansible.builtin.file:
         path: /home/harbor_images
@@ -25,45 +24,30 @@
         src: /share/harbor/mirrored-pause.tar
         dest: /home/
 
-    - name: K3s load harbor-core image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-core.tar
+    - name: Define Harbor images list
+      set_fact:
+        harbor_images:
+          - harbor-core
+          - harbor-db
+          - harbor-exporter
+          - harbor-jobservice
+          - harbor-portal
+          - harbor-registryctl
+          - nginx-photon
+          - redis-photon
+          - registry-photon
+          - trivy-adapter-photon
 
-    - name: K3s load harbor-db image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-db.tar
-
-    - name: K3s load harbor-exporter image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-exporter.tar
-
-    - name: K3s load harbor-jobservice image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-jobservice.tar
-
-    - name: K3s load harbor-portal image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-portal.tar
-
-    - name: K3s load harbor-registryctl image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/harbor-registryctl.tar
-
-    - name: K3s load nginx-photon image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/nginx-photon.tar
-
-    - name: K3s load redis-photon image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/redis-photon.tar
-
-    - name: K3s load registry-photon image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/registry-photon.tar
-
-    - name: K3s load harbor-db image
-      ansible.builtin.raw: k3s ctr images import /home/harbor-images/trivy-adapter-photon.tar
-
-    - name: K3s load rancher/mirrored-pause image
-      ansible.builtin.raw: k3s ctr images import /home/mirrored-pause.tar
+    - name: Load Harbor images using K3s ctr
+      ansible.builtin.shell:
+        cmd: "k3s ctr images import /home/harbor-images/{{ item }}.tar"
+      loop: "{{ harbor_images }}"
 
 - name: Execute Helm chart
   hosts: master
   gather_facts: false
   become: true
   tasks:
-
     - name: install Harbor using Helm
-      ansible.builtin.raw: helm install harbor --generate name --kubeconfig /etc/rancher/k3s/k3s.yaml
-    
+      ansible.builtin.shell: >-
+        helm install harbor --generate name --kubeconfig /etc/rancher/k3s/k3s.yaml
