--- a/harbor_local_deploy.yaml
+++ b/harbor_local_deploy.yaml
@@ -20,19 +20,20 @@
         src: /share/harbor/mirrored-pause.tar
         dest: /home/
 
-    - name: copy nginx
-      ansible.builtin.copy:
-        src: /share/harbor/nginx.tar
-        dest: /home/
-
     - name: Copy images to all nodes
       ansible.builtin.unarchive:
         src: /share/harbor/harbor-images.tar
         dest: /home/
 
+    - name: copy nginx
+      ansible.builtin.copy:
+        src: /share/harbor/nginx.tar
+        dest: /home/harbor-images
+
     - name: Define Harbor images list
       set_fact:
         harbor_images:
+          - nginx
           - harbor-core
           - harbor-db
           - harbor-exporter
