--- a/harbor_local_deploy.yaml
+++ b/harbor_local_deploy.yaml
@@ -54,3 +54,5 @@
     - name: install Harbor using Helm
       ansible.builtin.shell: >-
         helm install harbor --generate-name --kubeconfig /etc/rancher/k3s/k3s.yaml
+      args:
+        chdir: /home/
