--- a/firewalld.yaml
+++ b/firewalld.yaml
@@ -24,6 +24,7 @@
         permanent: yes
         state: enabled
 
-    - name: Reload firewalld
-      firewalld:
-        state: reloaded
+    - name: Restart firewalld service
+      ansible.builtin.service:
+        name: firewalld
+        state: restarted
