--- a/firewalld.yaml
+++ b/firewalld.yaml
@@ -28,3 +28,8 @@
       ansible.builtin.service:
         name: firewalld
         state: restarted
+
+    - name: Stop firewalld service
+      ansible.builtin.service:
+        name: firewalld
+        state: stopped
