--- a/k3s_cluster_install.yaml
+++ b/k3s_cluster_install.yaml
@@ -52,11 +52,17 @@
       ansible.builtin.set_fact:
         node_token: "{{ node_token_output.stdout_lines[0] }}"
 
-- name: firewalld configuration
-  import_playbook: firewalld.yaml
-
 - name: Set up worker nodes
   import_playbook: K3s_worker_install.yaml
 
+- name: firewalld configuration
+  import_playbook: firewalld.yaml
+
 - name: Set up Helm for master
   import_playbook: helm_install.yaml
+
+- name: Set up Harbor private registry
+  import_playbook: private-registry.yaml
+
+- name: Harbor deployment
+  import_playbook: harbor_local_deploy.yaml
