--- a/k3s_cluster_install.yaml
+++ b/k3s_cluster_install.yaml
@@ -12,24 +12,24 @@
 
     - name: Set k3s Executable
       ansible.builtin.copy:
-        src: /share/k3s/k3s
+        src: /k3s/k3s
         dest: /usr/local/bin/
         mode: '0755'
 
     - name: Set images
       ansible.builtin.copy:
-        src: /share/k3s/k3s-airgap-images-amd64.tar
+        src: /k3s/k3s-airgap-images-amd64.tar
         dest: /var/lib/rancher/k3s/agent/images/
 
     - name: Set install script
       ansible.builtin.copy:
-        src: /share/k3s/install.sh
+        src: /k3s/install.sh
         dest: /home/
         mode: '0755'
 
     - name: Get file for k3s-selinux
       ansible.builtin.copy:
-        src: /share/k3s/k3s-selinux-1.4-1.el9.noarch.rpm
+        src: /k3s/k3s-selinux-1.4-1.el9.noarch.rpm
         dest: /home/
 
     - name: install k3s-selinux
