--- a/k3s_cluster_install.yaml
+++ b/k3s_cluster_install.yaml
@@ -12,7 +12,7 @@
 
     - name: Set k3s Executable
       ansible.builtin.copy:
-        src: k3s
+        src: "k3s"
         dest: /usr/local/bin/
         mode: '0755'
 
