--- a/k3s_cluster_install.yaml
+++ b/k3s_cluster_install.yaml
@@ -18,18 +18,18 @@
 
     - name: Set images
       ansible.builtin.copy:
-        src: "k3s-airgap-images-amd64.tar"
+        src: ""{{ playbook_dir }}/k3s_files/k3s-airgap-images-amd64.tar"
         dest: /var/lib/rancher/k3s/agent/images/
 
     - name: Set install script
       ansible.builtin.copy:
-        src: install.sh
+        src: "{{ playbook_dir }}/k3s_files/install.sh"
         dest: /home/
         mode: '0755'
 
     - name: Get file for k3s-selinux
       ansible.builtin.copy:
-        src: k3s-selinux-1.4-1.el9.noarch.rpm
+        src: "{{ playbook_dir }}/k3s_files/k3s-selinux-1.4-1.el9.noarch.rpm"
         dest: /home/
 
     - name: install k3s-selinux
