--- a/helm_install.yaml
+++ b/helm_install.yaml
@@ -5,7 +5,7 @@
 
     - name: copy Helm binary to desired destination
       ansible.builtin.copy:
-        src: /share/helm/linux-amd64/helm
+        src: "{{ playbook_dir }}/helm/linux-amd64/helm"
         dest: /usr/local/bin/
         mode: '0755'
 
