--- a/main2.yaml
+++ b/main2.yaml
@@ -52,7 +52,7 @@
       ansible.builtin.set_fact:
         node_token: "{{ node_token_output.stdout_lines[0] }}"
 
-- name: Configure Firewall Rules
+- name: Disable firewall
   hosts: all
   become: true
   gather_facts: false
@@ -62,11 +62,6 @@
       ansible.builtin.service:
         name: firewalld
         state: stopped
-    
-    - name: Restart firewalld service
-      ansible.builtin.service:
-        name: firewalld
-        state: restarted
 
 - name: K3s worker nodes install
   hosts: workers
